force-app/main/default/objects/Service_Payment__c/Service_Payment__c.object-meta.xml
<CustomObject>
    <label>Service Payment</label>
    <nameField>
        <label>Service Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>