force-app/main/default/objects/Service_Payment__c/fields/AccountingMonth__c.field-meta.xml
<CustomField>
    <fullName>AccountingMonth__c</fullName>
    <label>AccountingMonth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>