force-app/main/default/objects/Service_Payment__c/fields/PaymentDealerCode__c.field-meta.xml
<CustomField>
    <fullName>PaymentDealerCode__c</fullName>
    <label>PaymentDealerCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>