force-app/main/default/objects/Service_Payment__c/fields/YnspireAccountDate__c.field-meta.xml
<CustomField>
    <fullName>YnspireAccountDate__c</fullName>
    <label>YnspireAccountDate</label>
    <type>Date</type>
</CustomField>